# game-of-life-oop

./: CMakeLists.txt
Inc/: Game.hpp  Model.hpp  SFMLViewController.hpp  ViewController.hpp
Src/: Game.cpp  Main.cpp  Model.cpp  SFMLViewController.cpp
